# Secure-Multi-Party-Private-Membership-Test

./: .gitignore  CMakeLists.txt  README.md
include/: mpmtcfg.hpp
include/auxkit/: logger.hpp  profiler.hpp  stack_tracer.hpp
include/core/: mpmtcfg.hpp
include/core/comm/: comm_adapter.hpp
include/core/comm/pipe_impl/: comm_pipe.hpp  comm_pipe.tpp
include/core/communication/: comm_adapter.hpp
include/core/communication/pipe_impl/: comm_pipe.hpp
include/core/crc/: crc64.hpp  crc64_ecma.hpp  crc64_ecma182.hpp  crc64_factory.hpp
include/core/crc/crc64_impl/: crc64_ecma182.hpp  crc64_iso.hpp
include/core/exception/: mrvf_exc.hpp  out_of_range.hpp  rng_exc.hpp  std_exc.hpp
include/core/exception/rng_exc/: rng_exc.hpp  rng_openssl_exc.hpp
include/core/hash/: hash_adapter.hpp
include/core/infrastructure/communication/: comm_adapter.hpp  comm_pipe.hpp
include/core/infrastructure/exception/: out_of_range.hpp
include/core/infrastructure/randomness/: random_adapter.hpp  random_openssl.hpp
include/core/infrastructure/randomness/openssl_impl/: random_openssl.hpp  random_openssl.tpp
include/core/infrastructure/ring/: rvector.hpp
include/core/network/: comm_adapter.hpp
include/core/protocol/: agent_ideal_fn.hpp  agent_server_func.hpp  base_func.hpp  base_ideal_fn.hpp  data_holder_func.hpp  data_holder_ideal_fn.hpp  querier_func.hpp  querier_ideal_fn.hpp
include/core/protocol/ass_impl/: agent_ass.hpp  agent_server_ass.hpp  data_holder_ass.hpp  querier_ass.hpp
include/core/protocol/fss_impl/: agent_server_fss.hpp  data_holder_fss.hpp  querier_fss.hpp
include/core/randomness/: random_adapter.hpp
include/core/randomness/openssl_impl/: random_openssl.hpp  random_openssl.tpp
include/core/ring/: ring.hpp  rvector.hpp  rvector.tpp  rvector_file.hpp  rvector_interface.hpp  vector_r1.hpp  vector_r32.hpp  vector_r64.hpp
include/core/ring/mrvf/: mrvf.hpp  mrvf_handler.hpp  mrvf_handler.tpp
include/core/rng/: rng_adapter.hpp
include/core/rng/openssl_impl/: rng_openssl.hpp  rng_openssl.tpp
include/math/: math.hpp
include/math/vector_r/: vector_r1.hpp  vector_r32.hpp  vector_r64.hpp
include/network/: comm_adapter.hpp
include/randomness/: random_adapter.hpp
include/ring/: vector_r1.hpp  vector_r32.hpp  vector_r64.hpp  vector_r_interface.hpp
include/utils/: logger.hpp  profiler.hpp
src/: main.cpp
src/auxkit/: logger.cpp  profiler.cpp  stack_tracer.cpp
src/core/crc/: crc64.cpp  crc64_ecma.cpp  crc64_ecma182.cpp  crc64_factory.cpp
src/core/crc/crc64_impl/: crc64_ecma182.cpp  crc64_iso.cpp
src/core/infrastructure/communication/: comm_pipe.cpp
src/core/infrastructure/randomness/: random_openssl.cpp
src/core/infrastructure/ring/: rvector_cuda.cu
src/core/network/: comm_adapter.cpp
src/core/protocol/ass_impl/: agent_ass.cpp  data_holder_ass.cpp  querier_ass.cpp
src/core/protocol/fss_impl/: agent_server_fss.cpp  data_holder_fss.cpp  querier_fss.cpp
src/core/randomness/: random_adapter.cpp
src/core/ring/: rvector_cuda.cu  rvector_stl.cpp  rvector_xsimd.cpp
src/math/vector_r/: vector_r1.cpp  vector_r32.cpp  vector_r64.cpp
src/network/: comm_adapter.cpp
src/randomness/: random_adapter.cpp
src/ring/cpu_ver/: c_vector_r64.cpp
src/ring/gpu_ver/: d_vector_r1.cu  d_vector_r32.cu
src/utils/: logger.cpp
